🗃️  Change sqlite3 to postgresql

--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -2,7 +2,7 @@
 #
 # Table name: profiles
 #
-#  id              :integer          not null, primary key
+#  id              :bigint           not null, primary key
 #  amount_coffee   :decimal(, )
 #  biography       :string
 #  completed       :boolean          default(FALSE)
@@ -12,7 +12,7 @@
 #  public          :boolean          default(FALSE)
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
-#  user_id         :integer          not null
+#  user_id         :bigint           not null
 #
 # Indexes
 #
@@ -20,7 +20,7 @@
 #
 # Foreign Keys
 #
-#  user_id  (user_id => users.id)
+#  fk_rails_...  (user_id => users.id)
 #
 
 one:
