--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -2,11 +2,11 @@
 #
 # Table name: images
 #
-#  id         :integer          not null, primary key
+#  id         :bigint           not null, primary key
 #  caption    :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  user_id    :integer          not null
+#  user_id    :bigint           not null
 #
 # Indexes
 #
@@ -14,7 +14,7 @@
 #
 # Foreign Keys
 #
-#  user_id  (user_id => users.id)
+#  fk_rails_...  (user_id => users.id)
 #
 
 one:
